<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvNumber"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:text="@string/initial_num"
        android:textAlignment="textEnd"
        android:textSize="80sp"
        android:textStyle="bold"
        android:textColor="@color/black"></TextView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonC"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="100dp"
            android:layout_height="110dp"
            android:layout_margin="2dp"
            android:text="@string/buttonC"
            android:textSize="30sp"></Button>

        <Button
            android:id="@+id/buttonFlipSign"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="100dp"
            android:layout_height="110dp"
            android:layout_margin="2dp"
            android:text="@string/buttonFlipSign"
            android:textSize="30sp"></Button>

        <Button
            android:id="@+id/buttonPercent"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="100dp"
            android:layout_height="110dp"
            android:layout_margin="2dp"
            android:text="@string/buttonPercent"
            android:textSize="30sp"></Button>

        <Button
            android:id="@+id/buttonSlash"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="100dp"
            android:layout_height="110dp"
            android:layout_margin="2dp"
            android:text="@string/buttonSlash"
            android:textSize="30sp"></Button>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button7"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="100dp"
            android:layout_height="110dp"
            android:layout_margin="2dp"
            android:text="@string/buttonSeven"
            android:textSize="30sp"></Button>

        <Button
            android:id="@+id/button8"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="100dp"
            android:layout_height="110dp"
            android:layout_margin="2dp"
            android:text="@string/buttonEight"
            android:textSize="30sp"></Button>

        <Button
            android:id="@+id/button9"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="100dp"
            android:layout_height="110dp"
            android:layout_margin="2dp"
            android:text="@string/buttonNine"
            android:textSize="30sp"></Button>

        <Button
            android:id="@+id/buttonMultiply"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="100dp"
            android:layout_height="110dp"
            android:layout_margin="2dp"
            android:text="@string/buttonMultiply"
            android:textSize="30sp"></Button>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button4"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="100dp"
            android:layout_height="110dp"
            android:layout_margin="2dp"
            android:text="@string/buttonFour"
            android:textSize="30sp"></Button>

        <Button
            android:id="@+id/button5"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="100dp"
            android:layout_height="110dp"
            android:layout_margin="2dp"
            android:text="@string/buttonFive"
            android:textSize="30sp"></Button>

        <Button
            android:id="@+id/button6"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="100dp"
            android:layout_height="110dp"
            android:layout_margin="2dp"
            android:text="@string/buttonSix"
            android:textSize="30sp"></Button>

        <Button
            android:id="@+id/buttonSubtract"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="100dp"
            android:layout_height="110dp"
            android:layout_margin="2dp"
            android:text="@string/buttonSubtract"
            android:textSize="30sp"></Button>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button1"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="100dp"
            android:layout_height="110dp"
            android:layout_margin="2dp"
            android:text="@string/buttonOne"
            android:textSize="30sp"></Button>

        <Button
            android:id="@+id/button2"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="100dp"
            android:layout_height="110dp"
            android:layout_margin="2dp"
            android:text="@string/buttonTwo"
            android:textSize="30sp"></Button>

        <Button
            android:id="@+id/button3"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="100dp"
            android:layout_height="110dp"
            android:layout_margin="2dp"
            android:text="@string/buttonThree"
            android:textSize="30sp"></Button>

        <Button
            android:id="@+id/buttonAdd"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="100dp"
            android:layout_height="110dp"
            android:layout_margin="2dp"
            android:text="@string/buttonAdd"
            android:textSize="30sp"></Button>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button0"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="204dp"
            android:layout_height="110dp"
            android:layout_margin="2dp"
            android:text="@string/buttonZero"
            android:textSize="30sp"></Button>


        <Button
            android:id="@+id/buttonPoint"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="100dp"
            android:layout_height="110dp"
            android:layout_margin="2dp"
            android:text="@string/buttonPoint"
            android:textSize="30sp"></Button>

        <Button
            android:id="@+id/buttonEquals"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="100dp"
            android:layout_height="110dp"
            android:layout_margin="2dp"
            android:text="@string/buttonEquals"
            android:textSize="30sp"></Button>

    </LinearLayout>




</LinearLayout>