<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SidewaysActivity"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvNumber"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="50dp"
            android:text="@string/initial_num"
            android:textAlignment="textEnd"
            android:textSize="100sp"
            android:textStyle="bold"
            android:textColor="@color/black"></TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonC"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:text="@string/buttonC"
                android:onClick="clearText"
                android:textSize="75sp"></Button>

            <Button
                android:id="@+id/buttonFlipSign"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:text="@string/buttonFlipSign"
                android:onClick="flipSign"
                android:textSize="75sp"></Button>

            <Button
                android:id="@+id/buttonPercent"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:onClick="butPercent"
                android:text="@string/buttonPercent"
                android:textSize="75sp"></Button>

            <Button
                android:id="@+id/buttonSlash"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:text="@string/buttonSlash"
                android:onClick="OpEvent"
                android:textSize="75sp"></Button>

            <Button
                android:id="@+id/buttonSin"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:text="@string/buttonSin"
                android:onClick="flipSign"
                android:textAllCaps="false"
                android:textSize="70sp"></Button>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/button7"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:onClick="NumberEvent"
                android:text="@string/buttonSeven"
                android:textSize="75sp"></Button>

            <Button
                android:id="@+id/button8"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:onClick="NumberEvent"
                android:layout_weight="1"
                android:text="@string/buttonEight"
                android:textSize="75sp"></Button>

            <Button
                android:id="@+id/button9"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:onClick="NumberEvent"
                android:layout_weight="1"
                android:text="@string/buttonNine"
                android:textSize="75sp"></Button>

            <Button
                android:id="@+id/buttonMultiply"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:onClick="OpEvent"
                android:text="@string/buttonMultiply"
                android:textSize="75sp"></Button>

            <Button
                android:id="@+id/buttonCos"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:text="@string/buttonCos"
                android:onClick="flipSign"
                android:textAllCaps="false"
                android:textSize="70sp"></Button>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button4"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:text="@string/buttonFour"
                android:onClick="NumberEvent"
                android:textSize="75sp"></Button>

            <Button
                android:id="@+id/button5"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:text="@string/buttonFive"
                android:onClick="NumberEvent"
                android:textSize="75sp"></Button>

            <Button
                android:id="@+id/button6"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:text="@string/buttonSix"
                android:onClick="NumberEvent"
                android:textSize="75sp"></Button>

            <Button
                android:id="@+id/buttonSubtract"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:text="@string/buttonSubtract"
                android:onClick="OpEvent"
                android:textSize="75sp"></Button>

            <Button
                android:id="@+id/buttonTan"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:text="@string/buttonTan"
                android:onClick="flipSign"
                android:textAllCaps="false"
                android:textSize="70sp"></Button>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button1"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:text="@string/buttonOne"
                android:onClick="NumberEvent"
                android:textSize="75sp"></Button>

            <Button
                android:id="@+id/button2"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:text="@string/buttonTwo"
                android:onClick="NumberEvent"
                android:textSize="75sp"></Button>

            <Button
                android:id="@+id/button3"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:text="@string/buttonThree"
                android:onClick="NumberEvent"
                android:textSize="75sp"></Button>

            <Button
                android:id="@+id/buttonAdd"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:text="@string/buttonAdd"
                android:onClick="OpEvent"
                android:textSize="75sp"></Button>

            <Button
                android:id="@+id/buttonLog"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:text="@string/buttonLog10"
                android:onClick="flipSign"
                android:textAllCaps="false"
                android:textSize="70sp"></Button>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button0"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="2"
                android:text="@string/buttonZero"
                android:onClick="NumberEvent"
                android:textSize="70sp"></Button>


            <Button
                android:id="@+id/buttonPoint"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:text="@string/buttonPoint"
                android:onClick="NumberEvent"
                android:textSize="70sp"></Button>

            <Button
                android:id="@+id/buttonEquals"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:text="@string/buttonEquals"
                android:onClick="butEquals"
                android:textSize="70sp"></Button>

            <Button
                android:id="@+id/buttonLn"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:text="@string/buttonLn"
                android:onClick="flipSign"
                android:textAllCaps="false"
                android:textSize="70sp"></Button>

        </LinearLayout>
    </LinearLayout>

</FrameLayout>